fix(chat input): Add robust check for whitespace
Also, the following misc problems I saw were fixed:
- moved .chat-bubble-image to correct file
- added border-radius to .chat-bubble-image
- Fixed chat input image to have object-fit and some margin on the right
- fixed missing check for errors in message in ChatInput
- Added button class to icon you press to upload photo for feedback
- add toast error message when message fails to be sent
- add trim to chat message. This should be added everywhere honestly

ref #315

--- a/apps/mull-ui/src/app/components/chat-bubble/chat-bubble.scss
+++ b/apps/mull-ui/src/app/components/chat-bubble/chat-bubble.scss
@@ -9,6 +9,13 @@
   overflow-wrap: break-word;
 }
 
+.chat-bubble-image {
+  max-width: 11rem;
+  max-height: 12rem;
+  display: block;
+  object-fit: contain;
+}
+
 .current-user-chat-container {
   flex-direction: row-reverse;
   img {
